--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "build": "vite build"
   },
   "dependencies": {
-    "vue": "^3.0.4"
+    "axios": "^0.24.0",
+    "vue": "3.2.20",
+    "vue-router": "4.0.12",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "vite": "^1.0.0-rc.13",
-    "@vue/compiler-sfc": "^3.0.4"
+    "@vue/compiler-sfc": "^3.0.4",
+    "sass": "^1.43.4",
+    "scss": "^0.2.4",
+    "scss-loader": "^0.0.1",
+    "typescript": "^4.5.2",
+    "vite": "^1.0.0-rc.13"
   }
 }
