--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^1.10.0",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.3.11",
     "sass": "^1.43.4",
@@ -20,6 +21,6 @@
     "scss-loader": "^0.0.1",
     "tailwindcss": "^2.2.19",
     "typescript": "^4.5.2",
-    "vite": "^1.0.0-rc.13"
+    "vite": "2"
   }
 }
